Bug 1636683 - Fix close buttons on Win7 + WR + external theme. r=kats

Reverts part of a change from bug 1632705 to allow close buttons
to be shown in Win7 under certain themes with WR enabled.

If it turns out that we need to support the clear rect + rounded
clip case, that can be implemented as a follow up - this is an
improvement for now though.

Differential Revision: https://phabricator.services.mozilla.com/D74752